--- a/package.json
+++ b/package.json
@@ -3,9 +3,12 @@
   "private": true,
   "dependencies": {
     "@rails/webpacker": "3.5",
+    "bootstrap": "^4.1.3",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
-    "jquery-ujs": "^1.2.2"
+    "jquery-ujs": "^1.2.2",
+    "popper": "^1.0.1",
+    "popper.js": "^1.14.4"
   },
   "devDependencies": {
     "webpack-dev-server": "2.11.2"
