--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ development:
   adapter: postgresql
   encoding: unicode
   database: user
-  username: rails_user
+  username: postgres
   host: localhost
 
   # The specified database role being used to connect to postgres.
