--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "jquery-ui": "^1.12.1",
     "jquery-ujs": "^1.2.2",
     "popper": "^1.0.1",
-    "popper.js": "^1.14.4"
+    "popper.js": "^1.14.4",
+    "rails-ujs": "^5.2.1"
   },
   "devDependencies": {
     "webpack-cli": "^3.1.2",
