--- a/config/database.yml
+++ b/config/database.yml
@@ -28,6 +28,7 @@ development:
   encoding: unicode
   database: user
   username: rails_user
+  # password: password
   host: localhost
 
   # The specified database role being used to connect to postgres.
