--- a/.gitignore
+++ b/.gitignore
@@ -13,7 +13,6 @@
 /tmp/*
 !/log/.keep
 !/tmp/.keep
-
 # Ignore uploaded files in development
 /storage/*
 !/storage/.keep
@@ -39,3 +38,6 @@ yarn-debug.log*
 yarn-debug.log*
 .yarn-integrity
 vendor/bundler
+
+/Gemfile.lock
+/package-lock.json
