--- a/.gitignore
+++ b/.gitignore
@@ -25,7 +25,7 @@
 /app/assets/images/*
 # Ignore master key for decrypting credentials and more.
 /config/master.key
-/config/datavase.yml
+# /config/datavase.yml
 
 /public/assets
 /public/*
@@ -35,9 +35,9 @@
 yarn-debug.log*
 .yarn-integrity
 
-/vendor/bundler/public/packs
+# /vendor/bundler/public/packs
 /vendor/bundler
 
 .rspec
 
-package-lock.json
+# /package-lock.json
