--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "dependencies": {
     "@rails/webpacker": "3.5",
     "bootstrap": "^4.1.3",
+    "dayjs": "^1.7.7",
     "jquery": "^3.3.1",
     "jquery-ui": "^1.12.1",
     "jquery-ujs": "^1.2.2",
