--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,13 +8,16 @@ jobs:
     docker:
       # specify the version you desire here
        - image: circleci/ruby:2.5.1-node-browsers
+         environment:
+          RAILS_ENV: test
+          PGUSER: root
       
       # Specify service dependencies here if necessary
       # CircleCI maintains a library of pre-built images
       # documented at https://circleci.com/docs/2.0/circleci-images/
        - image: circleci/postgres:9.4
          environment:
-           RAILS_ENV: test
+          POSTGRES_USER: root
 
     working_directory: ~/repo
 
