--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -44,6 +44,10 @@ jobs:
           paths:
             - ./vendor/bundle
           key: v1-dependencies-{{ checksum "Gemfile.lock" }}
+
+      - run:
+        name: rubocop
+        command: bundle exec rubocop -l
         
       # Database setup
       - run: bundle exec rake db:create
