--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,6 +9,7 @@ jobs:
       # specify the version you desire here
        - image: circleci/ruby:2.5.1-node-browsers
          environment:
+          RAILS_ENV: test
           PGUSER: root
       
       # Specify service dependencies here if necessary
